Fixed invisible spinner when components are loading

--- a/web/css/components/_spinner.less
+++ b/web/css/components/_spinner.less
@@ -15,6 +15,10 @@
         align-items: center;
         justify-content: center;
 
+        body > & {
+            position: fixed !important;
+        }
+
         .loader {
             &:extend(.spinner);
             flex-shrink: 0;
